--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ footer {
 
 .top_eye_catch {
   height: 500px;
-  background-image: url(../images/top.jpg);
+  background-image: url(../images/photo0000-2294.jpeg);
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
@@ -148,13 +148,13 @@ footer {
 
 .report_eye_catch {
   height: 300px;
-  background-image: url(../images/report.jpg);
+  background-image: url(../images/kizaminori.png);
   background-size: cover;
   background-position: center center;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fff;
+  color: rgb(74, 250, 162);
   font-weight: bold;
 }
 
